apport (0.83) UNRELEASED; urgency=low

  * apport/crashdb.py: Separate abstract from implemented functions.
  * apport/crashdb.py, apport/packaging.py, apport/ui.py: Use
    NotImplementedError instead of Exception in the abstract methods.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 08 Jun 2007 13:28:40 +0200

apport (0.82) gutsy; urgency=low

  * Add bin/ubuntu-fat-chroot: Script to install a set of commonly needed
    packages into a minimal Ubuntu chroot (as created by apport-chroot). This
    requires some hacking of postinst and /usr/sbin/ files in between the
    installation stages and thus deserves a script on its own.
  * apport/packaging.py:
    - Add "uninstalled" option to get_file_package(). If set to True, this
      will do an expensive search of files/packages which are not installed.
    - Add interface "set_mirror(URL)" for functions which need to retrieve
      packages and data from distribution mirrors.
  * backends/packaging-apt-dpkg.py: Implement "uninstalled" option and
    "set_mirror(URL)", add test cases.
  * bin/apport-retrace: Use "uninstalled" option now to install packages and
    corresponding -dbgsyms for uninstalled files mentioned in ProcMaps
    (Point 1 of apport-better-retracing spec). Bump python-apport dependency.
  * apport/packaging.py: Add interface get_available_version(package).
  * backends/packaging-apt-dpkg.py: Implement get_available_version(), add
    shallow test case.
  * apport/report.py: Add function obsolete_packages() to return packages in
    Package: and Depends: which are not up to date. Add test cases.
  * apport/ui.py, thread_collect_info(): For crashes, call obsolete_packages()
    and set UnreportableReason: if there are any (Point 2 of
    apport-better-retracing spec).
  * apport/ui.py, thread_collect_info(): call standard_title() and add it to
    the report as 'Title' field. This is useful if reporters modify the
    default title (per request of Brian Murray, thanks). Add test case.